--- a/report.html
+++ b/report.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>Report</title>
 <style>
-  body{font-family:Helvetica,sans-serif;max-width:700px;margin:40px auto;line-height:1.5;}
-  h1,h2{color:#333;}
-  table{border-collapse:collapse;} th,td{border:1px solid #ccc;padding:8px;}
-  .report-title{font-size:1.15em;font-weight:bold;margin-bottom:0.25em;}
-  .report-subtitle{font-size:1em;margin-bottom:0.15em;}
-  .report-parts{font-size:0.9em;color:#444;margin-bottom:1em;}
-  @media print{body{max-width:100%;}.page-break{page-break-before:always;}}
-</style>
-</head><body>
+body{font-family:Helvetica,sans-serif;max-width:700px;margin:40px auto;line-height:1.5;}
+h1,h2{color:#333;} table{border-collapse:collapse;} th,td{border:1px solid #ccc;padding:8px;}
+.report-title{font-size:1.15em;font-weight:bold;margin-bottom:0.25em;}
+.report-subtitle{font-size:1em;margin-bottom:0.15em;}
+.report-parts{font-size:0.9em;color:#444;margin-bottom:1em;}
+@media print{body{max-width:100%;}.page-break{page-break-before:always;}}
+</style></head><body>
 <p class="report-title">ML System Optimization - Assignment 2</p>
 <p class="report-subtitle">Parallel K-Means Clustering</p>
 <p class="report-parts">[P0] Problem Formulation, [P1] Design, [P2] Implementation, [P3] Results</p>
