--- a/code.html
+++ b/code.html
@@ -469,11 +469,21 @@ def _write_report_html(out_path, sections_text, results=None, github_url=&quot;&
     &quot;&quot;&quot;Write report as HTML when reportlab unavailable.&quot;&quot;&quot;
     html_parts = [
         &#x27;&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;meta charset=&quot;utf-8&quot;&gt;&lt;title&gt;Report&lt;/title&gt;&#x27;,
-        &#x27;&lt;style&gt;body{font-family:sans-serif;max-width:700px;margin:40px auto;line-height:1.5;}&#x27;
-        &#x27;h1,h2{color:#333;} table{border-collapse:collapse;} th,td{border:1px solid #ccc;padding:8px;}&lt;/style&gt;&#x27;,
-        &#x27;&lt;/head&gt;&lt;body&gt;&#x27;
+        &#x27;&lt;style&gt;&#x27;,
+        &#x27;body{font-family:Helvetica,sans-serif;max-width:700px;margin:40px auto;line-height:1.5;}&#x27;,
+        &#x27;h1,h2{color:#333;} table{border-collapse:collapse;} th,td{border:1px solid #ccc;padding:8px;}&#x27;,
+        &#x27;.report-title{font-size:1.15em;font-weight:bold;margin-bottom:0.25em;}&#x27;,
+        &#x27;.report-subtitle{font-size:1em;margin-bottom:0.15em;}&#x27;,
+        &#x27;.report-parts{font-size:0.9em;color:#444;margin-bottom:1em;}&#x27;,
+        &#x27;@media print{body{max-width:100%;}.page-break{page-break-before:always;}}&#x27;,
+        &#x27;&lt;/style&gt;&lt;/head&gt;&lt;body&gt;&#x27;,
+        &#x27;&lt;p class=&quot;report-title&quot;&gt;ML System Optimization - Assignment 2&lt;/p&gt;&#x27;,
+        &#x27;&lt;p class=&quot;report-subtitle&quot;&gt;Parallel K-Means Clustering&lt;/p&gt;&#x27;,
+        &#x27;&lt;p class=&quot;report-parts&quot;&gt;[P0] Problem Formulation, [P1] Design, [P2] Implementation, [P3] Results&lt;/p&gt;&#x27;,
     ]
     for title, body in sections_text:
+        if title == &quot;ML System Optimization - Assignment 2&quot;:
+            continue  # already in title block above
         html_parts.append(f&#x27;&lt;h2&gt;{html.escape(title)}&lt;/h2&gt;&#x27;)
         if title == &quot;Facing Sheet&quot;:
             gh = github_url or &quot;[INSERT LINK - to be included in facing sheet]&quot;
@@ -558,7 +568,7 @@ def generate_report_pdf(output_path=&quot;report.pdf&quot;, results_path=&quot;b
         return
 
     def add_page_footer(canv, _doc):
-        &quot;&quot;&quot;Draw &#x27;-- N --&#x27; at bottom center (like Assignment-1 PDF).&quot;&quot;&quot;
+        &quot;&quot;&quot;Draw &#x27;-- N --&#x27; at bottom center.&quot;&quot;&quot;
         page_num = canv.getPageNumber()
         canv.saveState()
         canv.setFont(&quot;Helvetica&quot;, 9)
@@ -582,7 +592,7 @@ def generate_report_pdf(output_path=&quot;report.pdf&quot;, results_path=&quot;b
             story.append(Paragraph(para.replace(&quot;\n&quot;, &quot;&lt;br/&gt;&quot;), styles[&quot;Normal&quot;]))
         story.append(Spacer(1, 12))
 
-    # Page 1: Title block (like Assignment-1)
+    # Page 1: Title block
     story.append(Paragraph(
         &quot;&lt;b&gt;ML System Optimization - Assignment 2&lt;/b&gt;&quot;,
         ParagraphStyle(name=&quot;ReportTitle&quot;, fontName=&quot;Helvetica-Bold&quot;, fontSize=14, spaceAfter=6),
