--- a/report.html
+++ b/report.html
@@ -11,15 +11,15 @@ h1,h2{color:#333;} table{border-collapse:collapse;} th,td{border:1px solid #ccc;
 <p class="report-subtitle">Parallel K-Means Clustering</p>
 <p class="report-parts">[P0] Problem Formulation, [P1] Design, [P2] Implementation, [P3] Results</p>
 <h2>Facing Sheet</h2>
-<p><b>GitHub (link to code):</b> [INSERT LINK - to be included in facing sheet]</p>
-<p><b>Team Contribution (corresponding author in bold):</b></p>
+<p><b>GitHub (link to code):</b> https://github.com/akadmllu/Assignment-2</p>
+<p><b>Team Contribution:</b></p>
 <table><tr><th>Name</th><th>Roll Number</th><th>Contribution</th></tr>
-<tr><td><b>DEBASHIS KUMAR SERAOGI</b></td><td>2024ad05321</td><td>Reviewed the paper and Drafted the Problem statement and solution</td></tr>
+<tr><td>DEBASHIS KUMAR SERAOGI</td><td>2024ad05321</td><td>Reviewed the paper and Drafted the Problem statement and solution</td></tr>
 <tr><td>BANDI DEEPIKA</td><td>2024ad05231</td><td>Contributed in reviewing the paper and in drafting the Problem statement and solution</td></tr>
 <tr><td>DURGARAJU SIVA SAKET</td><td>2024ad05485</td><td>Contributed in reviewing the paper and in drafting the Problem statement and solution</td></tr>
 <tr><td>GOKUL PRASANTH A .</td><td>2024ad05345</td><td>Contributed in reviewing the paper and in drafting the Problem statement and solution</td></tr>
 <tr><td>KADMLLU AMIT SUNIL .</td><td>2024ad05153</td><td>Contributed in reviewing the paper and in drafting the Problem statement and solution</td></tr>
-</table><p><i>Corresponding author in bold.</i></p>
+</table>
 <h2>Introduction</h2>
 <p>This assignment addresses ML System Optimization through parallelization of the K-Means clustering algorithm. We implement and compare a baseline (single-process) and a parallel (multi-process) version.</p>
 <h2>Literature Survey</h2>
